--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Bitcoin Market Place</title>
+<title>DENR EMB</title>
 
 <!--GOOGLE WEB FONT-->
     <!-- <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
@@ -38,8 +38,8 @@
     <script src="js/app.js"></script>
 
 <!--CONTROLLERS-->
-	<!-- <script src="js/controllers/LoginController.js"></script>
-    <script src="js/controllers/MainController.js"></script> -->
+	<!-- <script src="js/controllers/LoginController.js"></script> -->
+    <script src="js/controllers/MainController.js"></script>
 
 <!--SERVICES-->
     <!-- <script src="js/services/AuthService.js"></script>
