DEV: Rows and columns

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>DENR EMB</title>
+<!-- <title>DENR EMB</title> -->
+<title>Test 1</title>
 
 <!--GOOGLE WEB FONT-->
     <!-- <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
@@ -15,8 +16,7 @@
 <!--FONT AWESOME CSS-->
     <!-- <link href="css/font-awesome.min.css" rel="stylesheet"> -->
 
-<!--STYLESHEET-->
-	<link href="js/style.css" rel="stylesheet">
+
 
 <!--JAVASCRIPT-->
     <!-- <script src="js/jquery-3.2.1.min.js"></script>
@@ -50,6 +50,9 @@
     <link href="../dist/css/sb-admin-2.css" rel="stylesheet">
     <link href="../vendor/morrisjs/morris.css" rel="stylesheet">
     <link href="../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
+ <!--STYLESHEET-->
+	<link href="js/style.css" rel="stylesheet">
 </head>
 
 <body ng-app="denr-emb">
