DEV: Modal sample

--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
     <script src="js/controllers/MainController.js"></script>
 
 <!--SERVICES-->
-    <!-- <script src="js/services/AuthService.js"></script>
-    <script src="js/services/DatabaseService.js"></script> -->
+    <!-- <script src="js/services/AuthService.js"></script> -->
+    <script src="js/services/DatabaseService.js"></script>
+
+<!--COMPONENTS-->
+    <script src="js/components.js"></script>
 
 	<link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="../vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
