--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <script src="js/app.js"></script>
 
 <!--CONTROLLERS-->
-	<!-- <script src="js/controllers/LoginController.js"></script> -->
+	<script src="js/controllers/LoginController.js"></script>
     <script src="js/controllers/MainController.js"></script>
 
 <!--SERVICES-->
