REFACTOR: Added label on select year

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- <title>DENR EMB</title> -->
-<title>Test 1</title>
+<title>DENR</title>
 
 <!--GOOGLE WEB FONT-->
     <!-- <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
@@ -42,7 +42,7 @@
     <script src="js/controllers/MainController.js"></script>
 
 <!--SERVICES-->
-    <!-- <script src="js/services/AuthService.js"></script> -->
+    <script src="js/services/AuthService.js"></script>
     <script src="js/services/DatabaseService.js"></script>
 
 <!--COMPONENTS-->
